--- a/kamumau/web/layouts/footer.html
+++ b/kamumau/web/layouts/footer.html
@@ -1,6 +1,6 @@
 
-<footer class="container" style="margin-top: 3%; margin-left: 5px">
-  <p>&copy; Kelas D 2018-2019</p>
+<footer class="container" style="margin-top: 3%; ">
+    <p class="text-md-center" align="center">&copy; Kelas D 2018-2019</p>
 </footer>
 
 
